--- a/Home/templates/players.html
+++ b/Home/templates/players.html
@@ -21,6 +21,7 @@
   </nav>
 
   <main class="dashboard">
+    <input type="text" id="player-search-bar" placeholder="Search for a player..." class="search-bar" />
     <div id="players-list"></div> <!-- Container for the player list -->
     <div id="pagination" class="pagination"></div>
   </main>
