--- a/Home/templates/home.html
+++ b/Home/templates/home.html
@@ -35,7 +35,6 @@
     <div class="right-panel">
       <h2>Top 15 Overview</h2>
       <div id="top15-table">
-        <p>Loading Top 15...</p>
       </div>
     </div>
   </main>
@@ -57,5 +56,8 @@
   <script src="/node_modules/d3/dist/d3.min.js"></script>
   <!-- Your visualization script -->
   <script src="/Home/static/scripts/playerChart.js"></script>
+  <!-- Leaderboard script -->
+  <script src="/Home/static/scripts/topFifteen.js"></script>
+
 </body>
 </html>
