--- a/Home/templates/home.html
+++ b/Home/templates/home.html
@@ -11,7 +11,7 @@
   <!-- Navbar -->
   <nav class="navbar">
     <a href="/Home/templates/home.html" class="logo">
-      <img src="/ressources/logo XInsider2.png" href="/Home/templates/home.html"  alt="Football Dashboard Logo" style="height: 125px;" />
+      <img src="/ressources/XInsider2.png" alt="Football Dashboard Logo" style="height: 60px;" />
     </a>
     <ul class="nav-links">
       <li><a href="/Home/templates/players.html">Players</a></li>
