--- a/Home/templates/players.html
+++ b/Home/templates/players.html
@@ -11,11 +11,13 @@
 <body>
   <!-- Navbar -->
   <nav class="navbar">
-    <h1 class="logo">Football Dashboard</h1>
+    <a href="/Home/templates/home.html" class="logo">
+      <img src="/ressources/XInsider2.png" alt="Football Dashboard Logo" style="height: 60px;" />
+    </a>
     <ul class="nav-links">
       <li><a href="/Home/templates/players.html">Players</a></li>
-      <li><a href="/clubs.html">Clubs</a></li>
-      <li><a href="/games.html">Games</a></li>
+      <li><a href="#clubs">Clubs</a></li>
+      <li><a href="games.html">Games</a></li>
     </ul>
     <input type="text" id="search-bar" placeholder="Search players, teams..." />
   </nav>
