--- a/Home/templates/games.html
+++ b/Home/templates/games.html
@@ -36,26 +36,15 @@
       <input type="text" id="teamFilter" placeholder="Type to filter teams...">
     </div>
 
-    <!-- Match Table -->
-    <table id="matches-table">
-      <thead>
-        <tr>
-          <th>Date</th>
-          <th>Home Team</th>
-          <th>Away Team</th>
-          <th>Score</th>
-          <th>Stadium</th>
-        </tr>
-      </thead>
-      <tbody></tbody>
-    </table>
+    <!-- Match Cards -->
+    <div class="match-container" id="matches-list"></div>
 
     <!-- Pagination -->
     <div class="pagination">
       <button id="prevPage">&laquo; Prev</button>
       <span id="pageInfo"></span>
       <button id="nextPage">Next &raquo;</button>
-    </div>
+    </div>        
   </main>
 
   <!-- Footer -->
