--- a/Home/templates/player_info.html
+++ b/Home/templates/player_info.html
@@ -28,7 +28,7 @@
     </div>
     
     <!-- Market Value Evolution Chart -->
-    <div id="market-value-chart-container">
+    <div id="market-value-chart-container" class="chart-section">
       <h2>Market Value Evolution</h2>
       <svg id="marketValueChart" width="800" height="400"></svg> 
     </div>
