--- a/Home/templates/home.html
+++ b/Home/templates/home.html
@@ -33,10 +33,11 @@
     </div>
 
     <div class="right-panel">
-      <h2>Top 15 Overview</h2>
-      <div id="top15-table">
-      </div>
+      <button id="prev-btn" class="nav-btn">❮</button>
+      <div id="top15-table"></div>
+      <button id="next-btn" class="nav-btn">❯</button>
     </div>
+    
   </main>
 
   <!-- Chart Section -->
